--- a/roles/system_hardening/defaults/main.yml
+++ b/roles/system_hardening/defaults/main.yml
@@ -4,7 +4,7 @@ hardening_authorized_users: []  # list of {name: user, key: ssh-rsa ...}
 hardening_fail2ban_maxretry: 3
 hardening_fail2ban_bantime: 3600
 hardening_fail2ban_findtime: 600
-hardening_enable_ipv6: false
+hardening_enable_ipv6: true
 hardening_weekly_aide_check_minute: 0
 hardening_weekly_aide_check_hour: 3
 hardening_weekly_aide_check_day: 1
@@ -37,6 +37,7 @@ hardening_umask_targets:
 hardening_aide_db_path: /var/lib/aide/aide.db.gz
 hardening_aide_new_db_path: /var/lib/aide/aide.db.new.gz
 hardening_firewalld_zone: public
-hardening_firewalld_services:
-  - cockpit
+hardening_firewalld_services: []
 hardening_firewalld_ports: []
+hardening_enable_cockpit: false
+hardening_cockpit_bind_address: 127.0.0.1
