--- a/roles/system_hardening/tasks/redhat.yml
+++ b/roles/system_hardening/tasks/redhat.yml
@@ -35,7 +35,9 @@
     state: enabled
     immediate: true
   loop: "{{ hardening_firewalld_services }}"
-  when: ansible_facts.packages.get('firewalld') is defined
+  when:
+    - ansible_facts.packages.get('firewalld') is defined
+    - hardening_enable_cockpit | bool
 
 - name: Allow SSH port via firewalld
   ansible.posix.firewalld:
