--- a/roles/system_hardening/handlers/main.yml
+++ b/roles/system_hardening/handlers/main.yml
@@ -7,3 +7,10 @@
 - name: Validate sudoers configuration
   ansible.builtin.command: visudo -cf /etc/sudoers
   changed_when: false
+
+- name: Reload cockpit socket
+  ansible.builtin.systemd:
+    name: cockpit.socket
+    state: restarted
+    daemon_reload: true
+  failed_when: false
