--- a/tests/samples/with_secrets.yml
+++ b/tests/samples/with_secrets.yml
@@ -19,18 +19,25 @@ service_namespace: secure
 service_replicas: 2
 service_storage_gb: 4
 runtime_templates:
-  proxmox: templates/proxmox.yml.j2
-  docker: templates/docker.yml.j2
-  podman: templates/podman.yml.j2
-  kubernetes: templates/kubernetes.yml.j2
-  baremetal: templates/baremetal.yml.j2
+  proxmox: ../templates/proxmox.yml.j2
+  docker: ../templates/docker.yml.j2
+  podman: ../templates/podman.yml.j2
+  kubernetes: ../templates/kubernetes.yml.j2
+  baremetal: ../templates/baremetal.yml.j2
 exports:
   env:
     - name: SECURE_URL
       value: https://secure.local
-storage:
-  - name: secrets
-    path: /var/lib/secure
+mounts:
+  persistent_volumes:
+    - name: secrets
+      path: /var/lib/secure
+  ephemeral_mounts:
+    - name: runtime-run
+      path: /run/secure
+      apply_to: [docker, podman, kubernetes, proxmox, baremetal]
+      medium: Memory
+      size: 96Mi
 health:
   cmd:
     - /bin/sh
@@ -41,7 +48,7 @@ secrets:
   shred_after_apply: true
   env:
     - name: SECURE_TOKEN
-      value: changeme
+      value: super-secure-token
   files:
     - name: tls-key
       value: secret-tls-key
